--- a/components/Box/box.module.css
+++ b/components/Box/box.module.css
@@ -2,5 +2,113 @@
   padding: 24px 28px;
   box-shadow: 0px 6px 6px #00000029;
   border-radius: 22px;
+  margin-bottom: 40px;
   background: #ffffff;
+  min-height: 280px;
+  flex-direction: column;
+}
+
+.boxCont header {
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 35px;
+}
+
+.boxCont header h4 {
+  font-size: 29px;
+  font-weight: 600;
+  color: #9a9a9a;
+}
+
+.title {
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.ball {
+  width: 13px;
+  height: 13px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.boxCont header h5 {
+  font-size: 17px;
+  font-weight: 400;
+}
+
+.description {
+  align-items: center;
+  margin-bottom: 47px;
+  justify-content: space-between;
+}
+
+.description p {
+  max-width: 555px;
+  color: #a8a8a8;
+  font-weight: 400;
+}
+
+.avatars {
+  display: flex;
+  position: relative;
+  max-width: 150px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.avatar {
+  width: 37px;
+  height: 37px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.avatars a {
+  z-index: 1;
+  position: relative;
+}
+
+.avatars a span {
+  display: none;
+  position: absolute;
+  top: 40px;
+  background-color: #441680;
+  left: -5px;
+  color: #ffffff;
+  padding: 6px 18px;
+}
+
+.avatars a:hover span {
+  display: flex;
+}
+
+.avatars a:not(:first-of-type) {
+  margin-left: -6px;
+}
+
+.plus {
+  z-index: 0;
+  width: 22px;
+  display: flex;
+  justify-content: center;
+  margin-left: -6px;
+  align-items: center;
+  border: 1px solid #9a9a9a;
+  height: 22px;
+  color: #9a9a9a;
+  font-weight: 600;
+  border-radius: 50%;
+}
+
+.footer {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.actions {
+  max-width: 150px;
 }
