--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  background-color: #eeeeee;
 }
 
 a {
@@ -20,6 +21,13 @@ a {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
+.containerGeral {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .col {
@@ -93,6 +101,10 @@ a {
 
 .d-flex {
   display: flex;
+}
+
+.none {
+  display: none;
 }
 
 @media (max-width: 1000px) {
